--- a/admin/404.html
+++ b/admin/404.html
@@ -497,11 +497,8 @@
                                     <h2><i class="fontello-warning-empty text-black"></i>&nbsp;404</h2>
                                     <h3><small>Oops! Page not found.</small></h3>
                                     <p>
-                                        We could not find the page you were looking for. Meanwhile, you may <a class="error-link" href='index.html'>return to dashboard</a> or try using the search form.
-                                    </p>
-                                    <form class='search-form'>
-                                        <input type="text" name="search" class='form-control' placeholder="Search" />
-                                    </form>
+                                        You are getting distracted from the topic. <a class="error-link" href='index.html'>Return to dashboard.</a>
+                                    </p>                                    
                                 </div>
                                 <!-- /.error-content -->
                             </div>
