--- a/index.html
+++ b/index.html
@@ -67,19 +67,20 @@
                                 <a class="social" href="#"><i class="fa fa-linkedin"></i></a>
                             </li>
                             <li class="dropdown">
-                                <a class="dropdown-toggle" href="#" data-toggle="dropdown"><i class="fa fa-lock"></i> Login & Register</a>
+                                <a class="dropdown-toggle" href="#" data-toggle="dropdown"><i class="fa fa-lock"></i> Login &amp; Register</a>
                                 <div class="dropdown-menu">
-                                    <form method="post"> 
+                                    <form method="post" class="login-box"> 
                                         <div class="form-title">
                                             <h4>Login Area</h4>
                                             <hr>
+                                            <p class="error-message" style="color: red;"></p>
                                         </div>
-                                        <input class="form-control" type="text" name="username" placeholder="User Name"> 
+                                        <input class="form-control" type="text" name="username" placeholder="User Name" required> 
                                         <div class="formpassword">
-                                            <input class="form-control" type="password" name="password" placeholder="******"> 
+                                            <input class="form-control" type="password" name="password" placeholder="******" required> 
                                         </div>
                                         <div class="clearfix"></div>
-                                        <button type="submit" class="btn btn-block btn-primary">Login</button>
+                                        <input type="submit" class="btn btn-block btn-primary">Login
                                         <hr>
                                         <h4><a href="#">Create an Account</a></h4>
                                     </form> 
@@ -131,7 +132,7 @@
                                                     	<ul>
                                                             <li><a href="course-login.html">C.A.T</a></li>
                                                             <li><a href="course-login.html">Gemeral Awareness</a></li>
-                                                            <li><a href="course-login.html">Login & Register</a></li>
+                                                            <li><a href="course-login.html">Login &amp; Register</a></li>
                                                             <li><a href="course-login.html">Edit Your Account</a></li>
                                                             <li><a href="course-testimonials.html">Happy Students</a></li>
                                                             <li><a href="course-faqs.html">Friendly Asked Questions</a></li>
@@ -1182,6 +1183,29 @@
     <script src="rs-plugin/js/jquery.themepunch.revolution.min.js"></script>
     <script>
     jQuery(document).ready(function() {
+        /* login form        
+        **/
+        $("form.login-box").on("submit",function(e){
+            e.preventDefault();
+            var data = $( this ).serialize();
+            $.ajax({
+                url: 'admin/api/authenticate.php',
+                data: data,
+                type: "POST",
+                success: function(d){
+                    var i = jQuery.parseJSON(d);
+                    //alert(i);
+                    if(i.status == "success"){
+                        // similar behavior as an HTTP redirect
+                        window.location.replace("admin/index.php?user_id="+i.user_id);
+                    }
+                    else{                        
+                        $("p.error-message").append("Invalid username or password");
+                    }
+                }
+            })
+        });
+
         jQuery('.tp-banner').show().revolution(
             {
             dottedOverlay:"none",
@@ -1264,6 +1288,4 @@
     </script>
 
 </body>
-
-<!-- Mirrored from templatevisual.com/demo/learnplus/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 12 Sep 2015 19:27:33 GMT -->
 </html>
