--- a/course-login.html
+++ b/course-login.html
@@ -3,9 +3,6 @@
 <!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
 <!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
 <!--[if (gte IE 9)|!(IE)]><!--><html lang="en"> <!--<![endif]-->
-
-
-<!-- Mirrored from templatevisual.com/demo/learnplus/course-login.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 12 Sep 2015 19:28:32 GMT -->
 <head>
 
     <meta charset="utf-8">
@@ -65,18 +62,40 @@
                     <div class="panel-heading">
                         <div class="row">
                             <div class="col-xs-6">
-                                <a href="#" class="active" id="login-form-link">Login</a>
+                                <a href="#" class="active" id="register-form-link">Register</a>
                             </div>
                             <div class="col-xs-6">
-                                <a href="#" id="register-form-link">Register</a>
+                                <a href="#" id="login-form-link">Login</a>
                             </div>
                         </div>
                         <hr>
                     </div>
                     <div class="panel-body">
                         <div class="row">
-                            <div class="col-lg-12">
-                                <form id="login-form" action="http://phpoll.com/login/process" method="post" role="form" style="display: block;">
+                            <div class="col-lg-12">                                
+                                <form id="register-form" method="post" role="form" style="display: block;">
+                                    <p class="error-message"></p>
+                                    <div class="form-group">
+                                        <input type="text" name="fullname" id="fullname" tabindex="1" class="form-control" placeholder="Full Name" value="">
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="email" name="email" id="email" tabindex="1" class="form-control" placeholder="Email Address" value="">
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="password" name="password" id="password" tabindex="2" class="form-control" placeholder="Password">
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="password" name="confirm-password" id="confirm-password" tabindex="2" class="form-control" placeholder="Confirm Password">
+                                    </div>
+                                    <div class="form-group">
+                                        <div class="row">
+                                            <div class="col-sm-12">
+                                                <input type="submit" class="form-control btn btn-default btn-block" />Register an Account
+                                            </div>
+                                        </div>
+                                    </div>                                    
+                                </form>
+                                <form id="login-form" method="post" role="form" style="display: none;">
                                     <div class="form-group">
                                         <input type="text" name="username" id="username" tabindex="1" class="form-control" placeholder="Username" value="">
                                     </div>
@@ -103,28 +122,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                </form>
-                                <form id="register-form" action="http://phpoll.com/register/process" method="post" role="form" style="display: none;">
-                                    <div class="form-group">
-                                        <input type="text" name="username" id="username" tabindex="1" class="form-control" placeholder="Username" value="">
-                                    </div>
-                                    <div class="form-group">
-                                        <input type="email" name="email" id="email" tabindex="1" class="form-control" placeholder="Email Address" value="">
-                                    </div>
-                                    <div class="form-group">
-                                        <input type="password" name="password" id="password" tabindex="2" class="form-control" placeholder="Password">
-                                    </div>
-                                    <div class="form-group">
-                                        <input type="password" name="confirm-password" id="confirm-password" tabindex="2" class="form-control" placeholder="Confirm Password">
-                                    </div>
-                                    <div class="form-group">
-                                        <div class="row">
-                                            <div class="col-sm-12">
-                                                <button type="submit" class="form-control btn btn-default btn-block">Register an Account</button>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </form>
+                                </form>                                
                             </div>
                         </div>
                     </div>
@@ -143,6 +141,4 @@
 	<script src="js/custom.js"></script>
 
 </body>
-
-<!-- Mirrored from templatevisual.com/demo/learnplus/course-login.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 12 Sep 2015 19:28:33 GMT -->
 </html>
